--- a/ReporteadorWeb/Views/Home/dialogEditarCampos.cshtml
+++ b/ReporteadorWeb/Views/Home/dialogEditarCampos.cshtml
@@ -1,5 +1,5 @@
 ﻿<script src="~/Scripts/Views/Home/dialogEditarCampos.js"></script>
 <form id="frmdialogEditarCampos" method="post" enctype="multipart/form-data">    
     <label>Field</label>
-    <select></select>
+    <select id="cmbCampos"></select>
 </form>
