--- a/ReporteadorWeb/Views/Home/Index.cshtml
+++ b/ReporteadorWeb/Views/Home/Index.cshtml
@@ -15,11 +15,11 @@
                 <div id="lyrControls">
                     <label for="cmbShema">Schema:</label>
                     <select id="cmbSchema">
-                        <option>[All]</option>
-                        <option>dbo</option>
+                        <option value="">[All]</option>
+                        <option value="dbo">dbo</option>
                     </select>
                     <label for="txtFilter">Entity:</label>
-                    <input type="text" id="txtFilter /">
+                    <input type="text" id="txtFilter" />
                 </div>
                 <div id="lyrEntities">
 
